UI miss alignment on cohort details tab ui fixed

--- a/components/LearnerUserProfile/learnerUserProfile.module.scss
+++ b/components/LearnerUserProfile/learnerUserProfile.module.scss
@@ -599,24 +599,27 @@ $popUpHeight: 75vh;
       flex-direction: column;
       align-items: center;
       text-align: center;
-      padding: 5px;
-      p {
-        font-size: 14px;
-      }
+      // padding: 5px;
+      // p {
+      //   font-size: 14px;
+      // }
+     
       .rankNumber {
-        font-size: 50px;
+        // font-size: 30px;
         font-weight: 600;
         color: $primary;
       }
     }
   }
 }
-.cohortManager {
+
+
+.cohortManager , .cohortManager_date {
   border: 2px solid $primary;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px 15px;
+  // padding: 5px 15px;
   border-radius: 5px;
   margin: 0px 0px 5px 5px;
   img {
@@ -625,6 +628,9 @@ $popUpHeight: 75vh;
   span {
     margin-left: 10px;
   }
+}
+.cohortManager{
+  padding: 5px 15px;
 }
 
 // Invite Tab
@@ -807,5 +813,62 @@ $popUpHeight: 75vh;
       // height: 80%;
       overflow: auto;
     }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cohortManager_date{
+    font-size: 14px;
+  }
+  .cohortManager{
+    font-size: 14px;
+  }
+
+.rankText {
+    font-size: 14px;
+  }
+  .rankNumber{
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1330px) {
+.rankText {
+    font-size: 15px;
+  }
+  .rankNumber{
+    font-size: 25px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .cohortManager_date {
+      font-size: 16px;
+    }
+  
+    .cohortManager {
+      font-size: 16px;
+    }
+  .rankText {
+      font-size: 16px;
+    }
+    .rankInside {
+      padding: 5px 5px 0px 5px;
+  .rankNumber {
+    font-size: 45px;
+  }
+}
+}
+@media screen and (min-width: 1920px) {
+  .cohortManager_date {
+      font-size: 18px;
+    }
+  
+    .cohortManager {
+      font-size: 18px;
+    }
+  .rankText {
+      font-size: 18px;
+    }
+
+  .rankNumber {
+    font-size: 50px;
   }
 }
